New entries should be added at the top

2004-04-16 Added new ticker locator a formatter, fixed default font
           return

2004-04-16 Added get_name method to FontProperties class. Fixed font lookup
	   in GTK and WX backends. - PEB

2004-04-16 Added get- and set_fontstyle msethods. - PEB

2004-04-10 Mathtext fixes: scaling with dpi,  - JDH

2004-04-09 Improved font detection algorithm. - PEB

2004-04-09 Move deprecation warnings from text.py to __init__.py - PEB

2004-04-09 Added default font customization - JDH

2004-04-08 Fixed viewlim set problem on axes and axis. - JDH

2004-04-07 Added validate_comma_sep_str and font properties paramaters to
	   __init__.  Removed font families and added rcParams to
	   FontProperties __init__ arguments in font_manager.  Added
	   default font property parameters to .matplotlibrc file with
	   descriptions.  Added deprecation warnings to the get_- and
	   set_fontXXX methods of the Text object. - PEB

2004-04-06 Added load and save commands for ASCII data - JDH

2004-04-05 Improved font caching by not reading AFM fonts until needed.
	   Added better documentation.  Changed the behaviour of the
           get_family, set_family, and set_name methods of FontProperties.
	   - PEB

2004-04-05 Added WXAgg backend - JDH

2004-04-04 Improved font caching in backend_agg with changes to
           font_manager - JDH

2004-03-29 Fixed fontdicts and kwargs to work with new font manager -
           JDH








--------------------------------------------
This is the Old, stale, never used changelog

2002-12-10 - Added a TODO file and CHANGELOG.  Lots to do -- get
             crackin'!

           - Fixed y zoom tool bug

           - Adopted a compromise fix for the y data clipping problem.
             The problem was that for solid lines, the y data clipping
             (as opposed to the gc clipping) caused artifactual
             horizontal solid lines near the ylim boundaries.  I did a