@@ -13,7 +13,8 @@ set(l, 'linewidth', 1)
 
 xlabel('Smarts')
 ylabel('Probability')
-#title(r'$\rm{Histogram of IQ: }\mu=100, \sigma=15$')
-title('Histogram of IQ: mu=100, sigma=15')
+title(r'$\rm{Histogram of IQ: }\mu=100, \sigma=15$')
+axis([40, 160, 0, 0.03])
+#set(gca(), 'xlim', [40, 160])
 #savefig('histogram_demo',dpi=72)
 show()
