@@ -1,7 +1,13 @@
 New entries should be added at the top
 
-2004-04-16 Added new ticker locator a formatter, fixed default font
-           return
+2004-04-17 Added default dirs as list rather than single dir in
+	   setupext.py - JDH
+
+2004-04-16 Fixed wx exception swallowing bug (and there was much
+           rejoicing!) - JDH
+
+2004-04-16 Added new ti huncker locator a formatter, fixed default font
+           return - JDH
 
 2004-04-16 Added get_name method to FontProperties class. Fixed font lookup
 	   in GTK and WX backends. - PEB
